--- a/nieruchomości/Views/Home/_ShowFlat.cshtml
+++ b/nieruchomości/Views/Home/_ShowFlat.cshtml
@@ -88,7 +88,7 @@
                             {
                                 foreach (var picture in Model.Pictures)
                                 {
-                                    <div class="col-md-2" style="padding-bottom: 10px">
+                                    <div class="col-md-2" style="padding: 5px">
                                         <img src="/Content/Photos/@picture.Link" style="width: 100%; cursor: pointer" class="small-pict" />
                                     </div>
                                 }
