--- a/nieruchomości/Views/Home/CreateOffer.cshtml
+++ b/nieruchomości/Views/Home/CreateOffer.cshtml
@@ -81,7 +81,7 @@
                                 <div class="custom-advert-panel-body">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <small>Cena (zł):</small>
+                                            <small>Cena (zł)</small>
                                             @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control", @style = "max-width:none" + ((ViewData.ModelState.ContainsKey("Price") && ViewData.ModelState["Price"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
                                         </div>
                                         <div class="col-md-6">
