--- a/nieruchomości/Views/Admin/AdminMenu.cshtml
+++ b/nieruchomości/Views/Admin/AdminMenu.cshtml
@@ -8,7 +8,7 @@
     </div>
     <div class="btn-group">
         <div class="dropdown">
-            <button class="btn btn-default btn-warning dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="true" style="width: 100%">
+            <button class="btn btn-default btn-warning dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="true" style="width: 100%; border-radius: 0">
                 <span class="glyphicon glyphicon-user"></span>
                 <small>Pracownicy</small>
                 <span class="caret"></span>
@@ -22,7 +22,7 @@
     </div>
     <div class="btn-group">
         <div class="dropdown">
-            <button class="btn btn-default btn-danger dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true" style="width: 100%">
+            <button class="btn btn-default btn-danger dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true" style="width: 100%; border-radius: 0">
                 <span class="glyphicon glyphicon-home"></span>
                 <small>Nieruchomości</small>
                 <span class="caret"></span>
