--- a/nieruchomości/Views/Admin/Messages.cshtml
+++ b/nieruchomości/Views/Admin/Messages.cshtml
@@ -21,7 +21,7 @@
                                 Email
                             </th>
                             <th>
-                                Pytanie o nieruchomość
+                                Nieruchomość
                             </th>
                             <th>
 
