--- a/nieruchomości/Views/Home/_ShowFlat.cshtml
+++ b/nieruchomości/Views/Home/_ShowFlat.cshtml
@@ -20,6 +20,10 @@
 
 <div class="row" style="margin-right: 15px">
     <div class="col-md-12 custom-center-panel" style="margin-left: 15px">
+        @if (!Model.Visible)
+        {
+            <div class="alert-danger"><strong>To ogłoszenie jest ukryte.</strong> Nie jest widoczne dla użytkowników</div>
+        }
         <div class="pull-right" style="font-size: 12px; font-weight:100">Numer oferty: @Model.Number<br /><div class="pull-right" style="font-size: 12px; font-weight:100">Odwiedzin: <span class="badge">@(Model.Counter)</span></div></div>
         <h4>@Model.Title</h4>
         <h5>Mieszkanie</h5>
@@ -69,7 +73,7 @@
                             new { XPrice = Model.Price, XOwnershipForm = Model.Ownership },
                             new { data_modal = "", id = "btnCreate", @class = "btn btn-sm btn-info center-block " })
                     </div>
-                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
