--- a/nieruchomości/Views/Admin/Worker.cshtml
+++ b/nieruchomości/Views/Admin/Worker.cshtml
@@ -1,5 +1,4 @@
-﻿@using Services.Admin
-@using Services.EnumNameService.Implementation
+﻿@using Services.EnumNameService.Implementation
 @model Models.ViewModels.WorkerAdverts
 
 <div class="row" style="margin-right: 15px">
