--- a/nieruchomości/Views/Admin/AdList.cshtml
+++ b/nieruchomości/Views/Admin/AdList.cshtml
@@ -6,6 +6,7 @@
     label {
         font-size: small;
         font-weight: normal;
+        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     }
 
 </style>
