--- a/nieruchomości/Views/Admin/EditFlat.cshtml
+++ b/nieruchomości/Views/Admin/EditFlat.cshtml
@@ -112,7 +112,7 @@
                 <div class="col-md-4">
                     <div class="row">
                         <div class="col-md-12">
-                            <small>Typ ogłoszenia:</small>
+                            <small>Typ oferty:</small>
                             @Html.DropDownListFor(model => model.ToLet, new SelectList(new Dictionary<string, bool>() {{"Sprzedaż", false}, {"Wynajem", true}}, "value", "key"), new {@class = "form-control", @style = "max-width:none"})
                         </div>
                     </div>
